--- a/197-sls-notes-backend/package.json
+++ b/197-sls-notes-backend/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.326.0",
+    "jwt-decode": "^2.2.0",
     "moment": "^2.22.2",
     "serverless-offline": "^3.25.17",
     "underscore": "^1.9.1",
