--- a/197-sls-notes-backend/serverless.yml
+++ b/197-sls-notes-backend/serverless.yml
@@ -17,8 +17,8 @@ custom:
     - X-Amz-User-Agent
     - app_user_id
     - app_user_name
-  customDomain:
-    domainName: api.notesapp.xyz
+  customDomain: ## IF NOT USING CUSTOM DOMAIN, COMMENT OUT THIS SECTION
+    domainName: api.yourwebsite.com ## CHANGE THIS URL TO MATCH YOUR DOMAIN URL
     basePath: 'v1'
     stage: ${self:provider.stage}
     certificateName: notesapp.xyz
@@ -34,6 +34,7 @@ provider:
   endpointType: regional
   environment:
     NOTES_TABLE: ${self:service}-${opt:stage, self:provider.stage}
+    COGNITO_IDENTITY_POOL_ID: XX-XXXX-X:XXXX-XXXX-XXXX ## CHANGE THIS TO MATCH YOUR COGNITO IDENTITY POOL ID
   iamRoleStatements:
     - Effect: Allow
       Action: 
@@ -43,6 +44,16 @@ provider:
       Resource: "arn:aws:dynamodb:${opt:region, self:provider.region}:*:table/${self:provider.environment.NOTES_TABLE}"
 
 functions:
+  authenticate-google:
+    handler: api/authenticate-google.handler
+    description: Google IDP Authentication
+    events:
+      - http:
+          path: auth
+          method: get
+          cors:
+            origin: '*'
+            headers: ${self:custom.allowedHeaders}
   add-note:
     handler: api/add-note.handler
     description: POST /note
@@ -50,6 +61,7 @@ functions:
       - http:
           path: note
           method: post
+          authorizer: aws_iam
           cors:
             origin: '*'
             headers: ${self:custom.allowedHeaders}
@@ -61,6 +73,7 @@ functions:
       - http:
           path: note
           method: patch
+          authorizer: aws_iam
           cors:
             origin: '*'
             headers: ${self:custom.allowedHeaders}
@@ -72,6 +85,7 @@ functions:
       - http:
           path: notes
           method: get
+          authorizer: aws_iam
           cors:
             origin: '*'
             headers: ${self:custom.allowedHeaders}
@@ -83,6 +97,7 @@ functions:
       - http:
           path: note/n/{note_id}
           method: get
+          authorizer: aws_iam
           cors:
             origin: '*'
             headers: ${self:custom.allowedHeaders}
@@ -94,6 +109,7 @@ functions:
       - http:
           path: note/t/{timestamp}
           method: delete
+          authorizer: aws_iam
           cors:
             origin: '*'
             headers: ${self:custom.allowedHeaders}
@@ -131,3 +147,12 @@ resources:
               ReadCapacityUnits: 1
               WriteCapacityUnits: 1
             
+    GatewayResponseDefault4XX: ## YOU CAN ADD SIMILAR SECTION FOR 5XX ERRORS IF DESIRED
+      Type: AWS::ApiGateway::GatewayResponse
+      Properties:
+        ResponseParameters:
+          gatewayresponse.header.Access-Control-Allow-Origin: "'*'"
+          gatewayresponse.header.Access-Control-Allow-Headers: "'*'"
+        ResponseType: DEFAULT_4XX
+        RestApiId:
+          Ref: 'ApiGatewayRestApi'
